// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form renders a form component 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="mocked-default-widget"
          id="mocked-field-title"
        >
          The title
           - 
          No description
           -
          No value
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form renders a form component with defaults in the schema - Checkboxes 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="mocked-boolean-widget"
          id="mocked-field-theCheckBox"
        >
          The checkbox
           - 
          No description
           -
          No value
        </div>
        <div
          class="mocked-boolean-widget"
          id="mocked-field-theTruthyCheckBox"
        >
          The truthy checkbox
           - 
          No description
           -
          true
        </div>
        <div
          class="mocked-boolean-widget"
          id="mocked-field-theFalsyCheckBox"
        >
          The falsy checkbox
           - 
          No description
           -
          false
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form renders a form component with defaults in the schema - Default text field 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="mocked-default-widget"
          id="mocked-field-title"
        >
          The title
           - 
          No description
           -
          This is the default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Form renders a form component with defaults in the schema - Number field 1`] = `
<div>
  <div
    class="ui form"
  >
    <div
      id="blockform-fieldset-default"
    >
      <div
        class="ui segment form attached"
      >
        <div
          class="mocked-number-widget"
          id="mocked-field-number"
        >
          The number, default set
           - 
          No description
           -
          5
        </div>
        <div
          class="mocked-number-widget"
          id="mocked-field-numberWithValue"
        >
          The number, default with a value
           - 
          No description
           -
          10
        </div>
      </div>
    </div>
  </div>
</div>
`;
